# ai_practice

./: .gitignore  AI_BOARD_DEVELOPMENT_PLAN.md  API_DESIGN.md  ARCHITECTURE.md  DATABASE_DESIGN.md  PROJECT_DECISIONS.md  SCREEN_FLOW.md  alembic.ini  docker-compose.yml
assets/docs/: ui-mockup.html
backend/: .env.example  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai.py  auth.py  comments.py  deps.py  posts.py  tags.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  ai_log.py  comment.py  mcp_tool_log.py  post.py  post_embedding.py  tag.py  user.py
backend/app/schemas/: __init__.py  ai.py  auth.py  comment.py  post.py  tag.py  user.py
backend/app/services/: __init__.py  agent.py  ai_logs.py  comments.py  embeddings.py  mcp_client.py  mcp_logs.py  posts.py  rag.py  tags.py  users.py
backend/migrations/: README  env.py
backend/migrations/versions/: 1e8a3c4b2d90_add_ai_logs.py  5b9d4f2a1c83_add_mcp_tool_logs.py  8d0f4a9b7c21_add_post_embeddings.py  c604aa50c5d3_create_initial_board_tables.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: boardApi.ts  client.ts  types.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx  tokenStorage.ts
frontend/src/pages/: LoginPage.tsx  PostsPage.tsx  (+3 more)
mcp-server/: .env.example  pyproject.toml
mcp-server/src/ai_board_mcp/: __init__.py  config.py  server.py  tools.py
mcp-server/tests/: smoke_mcp_stdio.py
