[project]
name = "ai-board-mcp-server"
version = "0.1.0"
description = "MCP server for AI Board external developer references."
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "mcp[cli]",
    "pydantic-settings",
]

[project.scripts]
ai-board-mcp = "ai_board_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_board_mcp"]
